--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@tim-soft/react-dat-gui": "^4.0.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "react-spring": "^8.0.27",
+    "react-three-fiber": "^4.0.9",
+    "styled-components": "^5.0.0",
+    "three": "^0.112.1"
   },
   "scripts": {
     "start": "react-scripts start",
