--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@tim-soft/react-dat-gui": "^4.0.11",
+    "lodash": "^4.17.15",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^4.0.9",
     "styled-components": "^5.0.0",
-    "three": "^0.112.1"
+    "three": "^0.112.1",
+    "zustand": "^2.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
